Fixes layout shift issue in Safari/iOS.
This issue is obscured on localhost because loading components fast enough
causes upgrade to happen before first paint.

--- a/site/_scss/blocks/_search-box.scss
+++ b/site/_scss/blocks/_search-box.scss
@@ -47,6 +47,7 @@ search-box[active] {
   display: none;
   font: inherit;
   padding: get-size(200) get-size(300) get-size(200) get-size(700);
+  margin: 0;
 
   @include media-query('lg') {
     display: block;
